final commit before freeze

--- a/src/app/achievements/achievements.component.html
+++ b/src/app/achievements/achievements.component.html
@@ -22,32 +22,44 @@
     <h1>Integrated Human Practices</h1></div>
   <p>
     At the beginning of our project, two members of our team wanted to work on endocrine disruptor in wastewater
-    treatment. However, several survey and research made on the subject indicated us that there were already plenty of
-    solution for this kind of chemical. At that time, another idea popped up in our head.
+    treatment. However, after a few survey on the subject, and a thorough bibliographic search we found out that there
+    were
+    already plenty of proposed solutions for these kind of chemical. Another idea emerged:
   </p>
   <p>
     What about anticancer drugs?
   </p>
   <p>
-    Indeed, cancer is one of the biggest diseases of our century, lots of people are affected by it, hence, lots of
-    prescriptions, drugs are taken in other to fight this disease. Among does drugs, some really powerful one, which can
-    cause dramatic effect on the environment.
-    With that in mind, we decided to send surveys to the two biggest cancer research facilities in France and Europe.
-    The answer was glaring. There was still plenty of job to do in this field.
+    Indeed, cancer is one of the leading killer of the 21<sup>th</sup> century, its burden on public health larger year
+    by year. Advances in treatment
+    allow us a chance to beat cancer with evidence-based therapy and an ever-refining drug arsenal. But at what cost to
+    the environement? Some of those
+    medicines are highly harmful when released into the biosphere; excreted metabolites are causing dramatic disruption
+    on ecosystems. Yet we cannot just stop treating patients!
   </p>
   <p>
-    In order to be sure to not waste time, and target the right drug to degrade, we also asked, on the “type” of drugs,
-    researcher were working on the most. Finally, the methotrexate (MTX) appeared.
+    With that conundrum in mind, we decided to reach out to scientists from the two biggest cancer research
+    facilities in
+    France and Europe. Our findings were alarming : environmental considerations were not part of the drug development
+    process. While drug design will hopefully catch on to these concerns, it became clear we had to tackle the problem downstream,
+    degrading drugs after
+    they have been used by the patients.
+    Aiming for maximal societal impact, we sought to target the right drugs to degrade, the most ubiquitously prescribed.
+    Ultimately we narrowed our search to the cytostatic drugs, and more precisely methotrexate (MTX).
   </p>
-  <p>This is how our project was born.</p>
   <p>
-    To be sure, that our project was really integrated to the society we live in, we also asked to Arvia, a huge waste
-    water treatment company, geolocalized in Britany to answer couple of our question about waste water drug treatment.
-    Finally, by analyzing the answers to our surveys we propose to extend our project in at least three directions: i)
-    the design of a bacteria confinement that could allow the use of the ‘cleaning factory’ at home for people on
-    outpatient treatment, ii) the use of our system as a probiotic in the case of MTX acute toxicity, and iii) the use
-    of the ‘heterogenious’ expression system we develop for this project in other strains use in biotechnologies and in
-    which the synthetic pathways of interest behave as parasitic systems and are associated to fitness-cost.
+    To be sure that our project would really have the potential to be integrated into society, and impart consequential change,
+    we also asked to
+    companies such as
+    Arvia, a huge waste water treatment company operating in Great Britain, to answer a couple of our question about
+    waste water drug treatment. We also discussed with a chemist from Paris-Sud that work on drug degradation.
+  </p>
+  <p class="formoredetailssee">
+    You can find detailed explaination on those subjects on our <a
+    (click)="this.router.navigate(['/human-practices'], { fragment: 'top'})">Human Practices page</a>, which deeply
+    shaped our MethotrExit project. Thanks to
+    this process, we choose the methotrexate as proof of concept but designed a modular solution for others drug
+    targets.
   </p>
 
   <div class="titrebloc"><img class="carretitrepincipal"
@@ -58,6 +70,11 @@
     themselves are toxic. Modeling an heterogeneous expression of the synthetic pathway within the ‘cleaning factory’
     population highlights the interest of a division of labor between “cleaning” and “stem” bacterial cells.
   </p>
+  <p class="formoredetailssee">
+    See our <a
+    (click)="this.router.navigate(['/human-practices'], { fragment: 'top'})">Model page</a> for more details.
+  </p>
+
   <div class="titrebloc"><img class="carretitrepincipal"
                               src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
     <h1>Demonstrate our project work</h1></div>
@@ -65,8 +82,16 @@
     <i>Escherichia coli</i>. In only 5 h, our ‘cleaning factory’ drastically removes MTX from the media. During our
     project we
     demonstrated that the level of MTX after getting through our E. coli population, dropped from 512 µM to close to 0,
-    proving that our degrading system is efficient.
+    proving that <b>our degrading system is efficient</b>.
   </p>
+
+  <p class="formoredetailssee">
+    See our <a
+    (click)="this.router.navigate(['/demonstrate'], { fragment: 'top'})">Demonstrate page</a>, and also the <a
+    (click)="this.router.navigate(['/biology','mtx'], { fragment: 'top'})">Methotrexate degradation page</a> for
+    detailed analysis of our HPLC results, demonstrating that our system indeed do what it was planned to do.
+  </p>
+
   <div class="titrebloc"><img class="carretitrepincipal"
                               src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
     <h1>Improvement of an existing biobrick</h1></div>
@@ -84,6 +109,14 @@
     mutagenesis and sent the corrected pSB1C3-BBa_J23108_corrected plasmid ( <a
       href="http://parts.igem.org/Part:BBa_K2688025">BBa_K2688025</a>) to iGEM.
   </p>
+
+
+  <p class="formoredetailssee">
+    See our <a
+    (click)="this.router.navigate(['/biology','J23108'], { fragment: 'top'})">Improved Part page</a> for more details
+  </p>
+
+
   <div class="centerstuff" style="width: 300px;">
     <img src="http://2018.igem.org/wiki/images/2/26/T--GO_Paris-Saclay--silver.png" class="wideimg">
   </div>
@@ -294,28 +327,33 @@
     shows an image related to synthetic biology.
   <p>
 
+  <p class="formoredetailssee">
+    See our <a
+    (click)="this.router.navigate(['/collaborations'], { fragment: 'top'})">Collaboration page</a> for more details
+  </p>
+
 
   <div class="titrebloc"><img class="carretitrepincipal"
                               src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
     <h1>Human Practices</h1></div>
-  <p>
-    Cancer is one of the greatest diseases of our century and lots of different drugs are used in order to fight this
-    it. These medicines can cause dramatic effects on the environment. With that in our minds, we decided to send
+  <p>Cancer is one of the most harmful diseases of our century and lots of different drugs are used in order to fight
+    this it. These medicines can cause dramatic effects on the environment. With that in our minds, we decided to send
     surveys to the two biggest cancer research facilities in France and Europe. The answers were glaring and there is
     still plenty of work to be done in this field. In order to be sure not to waste time, and target the right drug to
     degrade, we asked the “type” of drugs researchers were working on the most. That’s how the methotrexate (MTX) came
-    to our thoughts and how our project was born. To be sure, that our concept was really integrated to the society we
-    live in, we made questionnaires for the general public. We also interviewed some specialists from Arvia, a huge
-    waste water treatment company, localized in Britany, about wastewaters drugs treatments. We even contacted a French
-    lawyer to make sure of the legality of our project. Finally, by analyzing the answers to our surveys we propose to
-    extend our project in at least three directions:</p>
+    to our thoughts and how our project was born. </p>
 
-    <p>i) the design of a bacteria confinement that could allow the use of the ‘cleaning factory’ at home for people on
-    outpatient treatment,</p>
-    <p>ii) the use of our system as a probiotic in the case of MTX acute toxicity,</p>
-    <p>iii) the use of the ‘heterogenious’ expression system we developed for this project in other strains in which the
-    synthetic pathways of interest are associated to fitness-cost.</p>
+  <p>We also interviewed Arvia, a huge waste water treatment company, localized in Great Britain, about wastewaters
+    drugs treatments. We also discuss at different time with Raphaël Labruere that works on drug degradation in
+    collaboration with industry. </p>
+  <p>We also contacted a French lawyer to make sure of the legality of our project.</p>
+  <p>To be sure that our concept was really integrated to the society we live in, we made a survey for the general
+    public. We also work in collaboration with an artist of our region to have another point of view of our work. </p>
 
+  <p class="formoredetailssee">
+    See our <a
+    (click)="this.router.navigate(['/human-practices'], { fragment: 'top'})">Human Practices page</a> for more details
+  </p>
 
 
   <div class="centerstuff" style="width: 300px;">
