--- a/src/app/attribution/attribution.component.html
+++ b/src/app/attribution/attribution.component.html
@@ -146,10 +146,14 @@
     theoretical part of the project. He also did a lot on the wiki, and on the human practice with a nice publication of
     an article describing our project on the faculty newsletter.
   </p>
+  <h2>GARNIER Guillaume</h2>
+  <p>He is a mathematician of the team, he participated in the creation of the mathematical model of our project and he
+    co-designed the iGEM Sorbonne team model. He spent summer to work on some mathematical parts as a trainee.
+  </p>
   <h2>GUEGAN Raphaël</h2>
   <p>He is a mathematician of the team, he co-designed and created the modelisation of our project and the iGEM Sorbonne
     team project. Raphael was present almost every meeting with some very interesting ideas, and gave us some really
-    practical, banquable feedbacks on the project.
+    practical, bankable feedbacks on the project.
   </p>
   <h2>MARTA Britany</h2>
   <p>There was no holiday for Britany, more than 2 months of work in the lab, from the cloning time, to the test of our
