--- a/src/app/collaborations/collaborations.component.html
+++ b/src/app/collaborations/collaborations.component.html
@@ -12,7 +12,9 @@
   <p style="margin-bottom: 1em;">
     During this 2018 edition, we made fruitful connections with many teams :
   </p>
-  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Sorbonne University team</h1>   </div>
+  <div class="titrebloc"><img class="carretitrepincipal"
+                              src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
+    <h1>Sorbonne University team</h1></div>
   <img class="pmeetup" src="http://2018.igem.org/wiki/images/4/48/T--GO_Paris-Saclay--sorbonne_collab.jpg">
   <p><a href="http://2018.igem.org/Team:Sorbonne_U_Paris/Collaborations">iGEM Sorbonne University</a>/IGEM GO
     Paris_Saclay is probably the best example of what a real collaboration is. Because our
@@ -20,12 +22,14 @@
     in
     creating our wiki), and with the sketching process of our new logo.</p>
   <p>
-    We, on the other hand, realised that there was no mathematician in their team. Our two mathematicians proposed to
+    We, on the other hand, realized that there was no mathematician in their team. Our two mathematicians proposed to
     work with them on the modelling of their project.
   </p>
   <p class="spacemaker"></p>
 
-  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Grenoble team</h1>   </div>
+  <div class="titrebloc"><img class="carretitrepincipal"
+                              src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
+    <h1>Grenoble team</h1></div>
   <img src="http://2018.igem.org/wiki/images/b/ba/T--GO_Paris-Saclay--grenoble_collab.jpg" class="pmeetup">
   <p>
     In collaboration with the <a href="http://2018.igem.org/Team:Grenoble-Alpes/Collaborations">IGEM Grenoble Alpes </a>
@@ -35,60 +39,68 @@
   </p>
   <p class="spacemaker"></p>
 
-  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Dusseldorf team</h1>   </div>
+  <div class="titrebloc"><img class="carretitrepincipal"
+                              src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
+    <h1>Dusseldorf team</h1></div>
   <img src="http://2018.igem.org/wiki/images/0/00/T--GO_Paris-Saclay--collab_postcard.png" class="pmeetup">
   <p>
-    We collaborated with <a href="http://2018.igem.org/Team:Duesseldorf/Collaborations">Dusseldorf iGEM steam</a> and we
-    participating team designs a postcard which shows an image related
-    to synthetic biology (or your topic) on the front and a small informational text on the back. Afterwards each team’s
-    postcards are exchanged with other iGEM-teams so that every team can collect postcards from all over the world. The
-    received postcards can then be shared with people in the neighbourhood, during public events and so on. We chose to
-    put the picture of our challenge in the front, and in the back a brief description of the Grenoble and the GO Paris
-    Saclay teams.
+    We collaborated with <a href="http://2018.igem.org/Team:Duesseldorf/Collaborations">Dusseldorf iGEM steam</a> by
+    participating in the design of a postcard showing an image related to synthetic biology associated with a small
+    informational text. Each team’s postcards were exchanged with other iGEM-teams so that each team could collect
+    postcards from all over the world. The goal is to diffuse the postcard during public events. We chose to put the
+    picture of our challenge and a brief description of the Grenoble and the GO Paris-Saclay teams.
   </p>
   <p class="spacemaker"></p>
 
 
-  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Sorbonne and Bordeaux university team</h1>   </div>
+  <div class="titrebloc"><img class="carretitrepincipal"
+                              src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
+    <h1>Sorbonne and Bordeaux university team</h1></div>
   <img src="http://2018.igem.org/wiki/images/a/a3/T--GO_Paris-Saclay--collabsorbbord.png" class="pmeetup"
        style="width: 70%;">
   <p>
-    With the help of Sorbonne University and the Bordeaux IGEM team, we organised a Seminar , the 26 of september, about
-    synthetic Biology. Aliaa El Dairouty (PHD student in public law), Alexei Grinbaud (researcher at CEA) and Pierre
-    Crozet (lecturer at Sorbonne University) were kind enough to join our little project and introduce different topics
-    to our audience. We hope this collaboration between our 3 team will last in time, in the IGEM competition.
+    With Sorbonne University and the Bordeaux IGEM team, we organized a Seminar on September 26th on Synthetic Biology.
+    Aliaa El Dairouty (PhD student in public law), Alexei Grinbaud (researcher at CEA) and Pierre Crozet (lecturer at
+    Sorbonne University) were kind enough to join our project to present different topics to our public. We hope the
+    collaboration between the three teams will continue beyond this seminar.
   </p>
 
-  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Louvain University team</h1>   </div>
+  <div class="titrebloc"><img class="carretitrepincipal"
+                              src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
+    <h1>Louvain University team</h1></div>
   <img src="http://2018.igem.org/wiki/images/c/c9/T--GO_Paris-Saclay--UCL_collab.png" class="pmeetup">
   <p>
-    In the early phase of the competition we welcomed Celestin from UCL Louvain iGem team at Paris for an entire day.
-    More than just a meeting, it It was the perfect time to discuss, and obtain a fresh look on the foundation of our
-    respective team’s project.
+    In the early phase of the competition, we welcomed Celestin from UCL Louvain iGEM team in Paris for a day. More than
+    just a meeting, it was the perfect time to discuss, and obtain a fresh look on the our respective team’s project.
   </p>
   <p>
-    We helped each other on several aspects of the contest such as the human practices and modelling. Our 2 teams would
-    had neglected about some iGEM mandatory elements without this meetings.
+    We helped each other on several aspects of the contest such as the human practices and modelling. Our two teams
+    would have neglected iGEM mandatory elements without this meeting.
 
   </p>
 
-  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Evry team</h1>   </div>
+  <div class="titrebloc"><img class="carretitrepincipal"
+                              src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
+    <h1>Evry team</h1></div>
   <img src="http://2018.igem.org/wiki/images/9/9a/T--GO_Paris-Saclay--evryretraite.png" class="pmeetup"
        style="width: 70%;">
   <p>
     With Adèle Mazelin and Esteban Lebrun from the Evry Paris Saclay team, we came up with a vulgarization activity in
     senior residence for the science festival, a national scientific group of events.
-  </p><p>
-    In France, there is a trend to see a negative opinion about GMO especially among the senior population. During this
-    day we firstly evaluate bacterial and synthetic biology knowledge of the audience. Surprisingly most of them were
-    familiar with fact that bacteria are ubiquitous, and even with the microbiote notion.
-</p><p>
-    However as usual, synthetic biology and GMO production were seen as an negative “technology” made by agribusiness
-    for their own profit. With that reaction in mind, we took the time at the end of the talk to enlight all the issue
-    synthetic biology can or as already resolved (with somes examples such as insulin production).
-</p><p>
-    It was a truly inspiring moment to hear that we changed their opinion against GMO and hope that one day EU laws
-    would be more adapted to this interesting field.
+  </p>
+  <p>
+    In France, GMO are often negatively perceived, especially among the senior population. During this day, we firstly
+    evaluated the bacterial and synthetic biology knowledge of the audience. Surprisingly most of them were familiar
+    with fact that bacteria are ubiquitous, and even with the microbiote notion.
+  </p>
+  <p>
+    However, as usual, synthetic biology and GMO production were seen as negative “technologies” made by the
+    agribusiness for their own profit. We took time to explain the technologies and to enlighten all the issue synthetic
+    biology can or as already addressed with examples such as the insulin production.
+  </p>
+  <p>
+    It was a truly inspiring moment to hear that we could change their opinion against GMO. We hope that, in the future,
+    EU laws will be more adapted to this promising field.
 
   </p>
 
@@ -96,12 +108,14 @@
   <p class="spacemaker"></p>
   <p>These collaboration would not have been the same without the meetups we attended :</p>
 
-  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>European meetup with the iGEM community</h1>   </div>
+  <div class="titrebloc"><img class="carretitrepincipal"
+                              src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
+    <h1>European meetup with the iGEM community</h1></div>
 
   <div>
     <img class="emeetupimgtall" src="http://2018.igem.org/wiki/images/2/21/T--GO_Paris-Saclay--european_meetup_1.jpg">
     <img class="emeetupimg" src="http://2018.igem.org/wiki/images/a/a2/T--GO_Paris-Saclay--european_meetup_2.jpg">
-    <p>We were delighted to participate in the iGEM European meet-up in Munich. There we got the chance to present our
+    <p>We were delighted to participate to the iGEM European meet-up in Munich. There, we got the chance to present our
       project in its earliest stages to:</p>
 
 
@@ -115,25 +129,24 @@
         {{team}}
       </mat-grid-tile>
     </mat-grid-list>
-    <p>Thanks to this amazing meetup we got the chance to ear about fantastic project happening nearby. It was the first
-      poster session for our team and we finished 2nd. After the meetup we stayed in touch we some of the IGEM
-      teams.</p>
+    <p>Thanks to this amazing meetup, we got the chance to listen to fantastic projects happening nearby. It was the
+      first poster session for our team and we finished 2nd. After the meetup, we stayed in touch with iGEM teams.</p>
 
   </div>
 
   <div class="spacemaker"></div>
 
-  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Parisian meetup</h1>   </div>
-  <p>The Parisian meetup was the first time we presented our project to all the French teams: Bordeaux, Toulouse,
-    Pasteur,
-    Evry, Grenoble and Sorbonne University. They gave us some amazing feedback about our project and lots of compliments
-    about our presentation. We were blessed to be there, and after this meetup we kept in touch with IGEM Bordeaux,
-    Sorbonne and Grenoble.
+  <div class="titrebloc"><img class="carretitrepincipal"
+                              src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
+    <h1>Parisian meetup</h1></div>
+  <p>The Parisian meetup was our first opportunity to present our project to all the French teams: Bordeaux, Toulouse,
+    Pasteur, Evry, Grenoble and Sorbonne University. We receive a strong positive feedback on our project and
+    congratulation for our presentation. We were happy to be there, and kept in touch with iGEM Bordeaux, Sorbonne and
+    Grenoble teams after this meetup.
   </p>
   <img class="pmeetup" src="http://2018.igem.org/wiki/images/7/76/T--GO_Paris-Saclay--parisian_meetup.jpg">
 
   <div class="spacemaker"></div>
-
 
 
 </mat-card>
