--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -62,7 +62,7 @@ http://2018.igem.org/wiki/images/2/28/T--GO_Paris-Saclay--methotrexittire.png
     treatment program.
   </div>
 
-  <div id="text2carte">Pharmaceuticals pollution is underated.</div>
+  <div id="text2carte">Pharmaceutical pollution is underated.</div>
 
   <div id="text3">If no mitigating action is taken, the environmental threat could increase by up to
     <strong>65%</strong> in 2050 for some drugs.
@@ -80,8 +80,8 @@ http://2018.igem.org/wiki/images/2/28/T--GO_Paris-Saclay--methotrexittire.png
     a project that can be adaptable to any drug degradation in wastewater
   </div>
 
-  <div id="text_bact3">We bring <span id="gras">heterogeneity in the form of varying pathway expression</span>, as that
-    ensures the survival of a self-renewable reserve subpopulation : <br>
+  <div id="text_bact3">We brought <span id="gras">heterogeneity in the form of varying pathway expression</span>, as that
+    ensures the survival of a self-renewable reserve subpopulation  <br>
     A division of labor between <span id="metho_rouge">‘cleaning’</span> and <span id="jaune">‘stem’</span> bacteria
   </div>
 
