--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -46,8 +46,7 @@
     and optimize, in a yeast model, functionalized nanobodies targeting α-synuclein aggregates responsible of
     Parkinson's disease;
     another one, the ‘Heterogenious Cleaning Factory’ designed to develop a bacterial platform capable of cleaning up
-    hospital wastewater
-    ,contaminated with therapeutic anticancer agents. After a constructive peer-review session with our advisors and
+    hospital wastewater, contaminated with therapeutic anticancer agents. After a constructive peer-review session with our advisors and
     PIs,
     the ‘Heterogenious Cleaning Factory’ was finally chosen according to the following motivations :
   </p>
@@ -56,11 +55,9 @@
     are not completely metabolized by the patients, therefore are released in the environment in urine.
   </p>
   <p>
-    Unfortunately, environmental risk assessment is available for only a select few anti-cancer drugs, derived mainly
+    Unfortunately, environmental risk assessment is available for only a limited number of anti-cancer drugs, derived mainly
     from predicted
-    data and excluding information on their metabolites and transformation products (TPs)
-    <reference-box shorthand="Toolaram2014"></reference-box>
-    . It is known that
+    data and excluding information on their metabolites and transformation products<reference-box shorthand="Toolaram2014"></reference-box>. It is known that
     the most commonly used drugs such as methotrexate (MTX) or 5-fluorouracil exhibit genotoxic effects due to their
     mechanism of action.
   </p>
@@ -89,14 +86,14 @@
 
   <mat-card class="eatintotextmargin">
     <img src="http://2018.igem.org/wiki/images/f/f3/T--GO_Paris-Saclay--degrad_complete_chemical.png" class="wideimg">
-    <div class="mat-caption captionafterapicture">Figure 1 : Overview of the chemical transformation produced by our
+    <div class="mat-caption captionafterapicture">Figure 1: Overview of the chemical transformation produced by our
       pathway
     </div>
   </mat-card>
   <p>
     For MTX biotransformation inside the cell, we focused our attention on two enzymes that have been described as
     involved
-    in MTX biotransformation (Figure 1). The most important one is the Pseudomonas carboxypeptidase G2 (Cpg2,
+    in MTX biotransformation (Figure 1). The most important one is the <i>Pseudomonas</i> carboxypeptidase G2 (Cpg2,
     commercialy marketed
     as <a href="https://en.wikipedia.org/wiki/Glucarpidase">Voraxase</a><sup>tm</sup>)
     which rapidly converts MTX into less toxic metabolites glutamate and <abbr
@@ -127,10 +124,10 @@
   <p>
     Many laboratory strains of <i>E. coli</i> are resistant to MTX. This resistance is mainly due to the export of MTX
     through
-    efflux pumps composed several proteins such as AcrA and TolC
+    efflux pumps composed of several proteins such as AcrA and TolC
     <reference-box shorthand="Kopytek2000"></reference-box>
     . One of the challenges of our
-    project therefore relays on limiting MTX efflux to favor MTX biotransformation and sequestration within the
+    project therefore relies on limiting MTX efflux to favor MTX biotransformation and sequestration within the
     ‘cleaning
     factory’. Moreover we needed an indicative strain to easily monitor MTX biotransformation.
   </p>
@@ -139,7 +136,7 @@
     <reference-box shorthand="Baba2006"></reference-box>
     to test the
     growth of several <i>E. coli</i> K12 mutants (&Delta;<i>acrA</i>, &Delta;<i>acrB</i>, &Delta;<i>abgT</i>,
-    &Delta;<i>tolC</i>) in presence of MTX (Figure 2).
+    &Delta;<i>tolC</i>) in presence of MTX.
   </p>
 
   <p class="intermediateconclusion">
@@ -157,13 +154,13 @@
   <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Expression vector design</h1>   </div>
   <mat-card class="sidefigure">
     <img src="http://2018.igem.org/wiki/images/3/38/T--GO_Paris-Saclay--folC_cpg2_pSB1C3.png" class="wideimg">
-    <div class="mat-caption captionafterapicture">Figure 3 : The <i>folC</i>-<i>cpg2</i> encoding plasmid present within
+    <div class="mat-caption captionafterapicture">Figure 3: The <i>folC</i>-<i>cpg2</i> encoding plasmid present within
       the MTX ‘Cleaning Factory’
     </div>
   </mat-card>
 
   <p>
-    <b>FolC/folylpolyglutamate: adding a polyglutamate to MTX</b><br>
+    <b>FolC/folylpolyglutamate synthetase: adding a polyglutamate to MTX</b><br>
     FolC is one of the enzymes (ATP-dependent) which can drive the glutamylation reaction. FolC is naturally encoded by
     <i>E. coli</i>.
     However to control and overexpress it, we cloned <i>folC</i> under the control of the ara inducible promoter in
@@ -171,7 +168,7 @@
   </p>
   <p>
     <b>Carboxypeptidase G2: breaking MTX into DAMPA and glutamate</b><br>
-    Originating from Pseudomonas strain RS-16, carboxypeptidase is not naturally present in <i>E. coli</i> genome.
+    Originating from <i>Pseudomonas</i> strain RS-16, carboxypeptidase is not naturally present in <i>E. coli</i> genome.
     The <i>cpg2</i> gene was cloned within pSB1C3 under the control of lac
     inducible promoter. We constructed two plasmids: one containing only <i>cpg2</i> expression cassette and the other
     harboring both <i>cpg2</i>
@@ -215,15 +212,15 @@
   <mat-card class="eatintotextmargin" style="overflow: auto;">
     <img src="http://2018.igem.org/wiki/images/a/a4/T--GO_Paris-Saclay--recap_exp_mtx.png"
          style="width:40%;float:left;margin-right: 1.2em;">
-    <div class="mat-caption captionafterapicture">Figure 4 : MTX-biotransformation assays
+    <div class="mat-caption captionafterapicture">Figure 4: MTX-biotransformation assays
       <br><br>
       <div class="captionmaterialmethod">
         The WT and &Delta;<i>tolC</i> chassis strains harbouring pSB1C3-<i>cpg2</i>, pSB1C3-<i>folC</i>-<i>cpg2</i> or
         control plasmids (pSB1C3-tet or pSB1C3-<i>folC</i>)
-        and were precultured overnight under agitation at 37°C in 4 ml of LB supplemented with 30 µg/ml chloramphenicol.
+        were precultured overnight under agitation at 37°C in 4 ml of LB supplemented with 30 µg/ml chloramphenicol.
         Thereafter, the chassis strains were inoculated at an opacimetry of 0.2 (DO600nm) in LB medium containing and
         0.5 mM
-        IPTG and 0.2 % arabinose and either 2% DMSO (‘control condition’) or 514 µM MTX (‘MTX condition’). Five or 24 h
+        IPTG and 0.2 % arabinose and either 2% DMSO (‘control condition’) or 512 µM MTX (‘MTX condition’). Five or 24 h
         after
         shaking at 37°C, the samples were harvested, centrifuged and the supernatants filtered before being tested on
         the &Delta;<i>acrA</i>
@@ -243,7 +240,7 @@
         medium. The culture was
         diluted in LB medium to obtain a ‘2X-culture’ at an initial OD<sub>600nm</sub> of 0.04. Fifty µl of this
         ‘2X-culture’ were inoculated
-        in a in a 96-well plate. Fifty µl per well of supernatants filtrated after ‘MTX biotransformation assays’
+        in a 96-well plate. Fifty µl per well of supernatants filtrated after ‘MTX biotransformation assays’
         performed
         during 20 h (Figure 4) were added to this ‘2X-culture’ (so that the initial OD was 0.02 and the MTX
         concentration
@@ -251,7 +248,7 @@
         adhesive
         transparent top to avoid evaporation. Bacteria were grown at 37°C in a Clariostar® plate reader (BMG LABtech
         GmbH),
-        with orbital shaking, measuring OD600 all 20 min. The growth over 500 min of the indicative strain incubated
+        with orbital shaking, measuring OD<sub>600nm</sub> all 20 min. The growth over 500 min of the indicative strain incubated
         with
         different supernatants is presented in <span style="font-weight: bold;">panel A</span>. The final opacimetry
         (at 500 min) is presented in <span style="font-weight: bold;">panel B</span>. The results
@@ -275,7 +272,7 @@
 
   <mat-card class="eatintotextmargin">
     <img src="http://2018.igem.org/wiki/images/0/0f/T--GO_Paris-Saclay--typ_hplc_res.png" class="wideimg">
-    <div class="mat-caption captionafterapicture">Figure 5.2 : HPLC analysis of MTX medium incubated with a control
+    <div class="mat-caption captionafterapicture">Figure 5.2: HPLC analysis of MTX medium incubated with a control
       strain or a ‘MTX-Cleaning Factory’
       <br>
       <div class="captionmaterialmethod">
@@ -422,7 +419,7 @@
 
       </g>
     </svg>
-    <div class="mat-caption captionafterapicture">Figure 8 : Interplay between Ler and H-NS for the modulation of <i>LEE5</i>
+    <div class="mat-caption captionafterapicture">Figure 8: Interplay between Ler and H-NS for the modulation of <i>LEE5</i>
       promoter activity
       <br>
       <div class="captionmaterialmethod">
@@ -464,7 +461,7 @@
     <reference-box shorthand="Leh2017"></reference-box>
     . Only two components must be provided to
     implement this ‘heterogenious’ system in <i>E. coli</i>: <i>LEE5</i> promoter region and the gene encoding
-    Ler (‘LEE encoded regulator’). The <i>E. coli</i> endogeneous H-NS silencer also plays a part in the system : the
+    Ler (‘LEE encoded regulator’). The <i>E. coli</i> endogeneous H-NS silencer also plays a part in the system: the
     competition between H-NS and Ler for <i>LEE5</i> binding can
     generate some heterogeneity of transgene expression within <i>E. coli</i> populations
     <reference-box shorthand="Leh2017"></reference-box>
@@ -476,7 +473,7 @@
     under the control of <i>LEE5</i>. We analyzed the expression of <i>gfp</i> under the control of <i>LEE5</i> promoter as
     proof of concept.
     The resulting population was heterogeneous regarding GFP expression since one sub-population expressed GFP and the
-    other didn’t (Figure 9).
+    other did not (Figure 9).
 
   </p>
 
@@ -512,7 +509,7 @@
     silenced or activated.
     Using this interesting property, several possibilities are opened for application to our project. Instead of <i>gfp</i>
     transgene,
-    <i>cpg2</i> and <i>folC</i> encoding genes could be clones in operon under the control of <i>LEE5</i>. This way,
+    <i>cpg2</i> and <i>folC</i> encoding genes could be cloned in operon under the control of <i>LEE5</i>. This way,
     part of the population will not
     express the MTX-degradation pathway and therefore will ensure cell renewal in the bioreactor. This illustrates the
     concept of
