--- a/src/app/team-roster/team-roster.component.html
+++ b/src/app/team-roster/team-roster.component.html
@@ -112,7 +112,7 @@
 </div>
 
 
-<div id="arn"><a href="#"><img src="http://2018.igem.org/wiki/images/c/c1/T--GO_Paris-Saclay--arn.png"
+<div id="arn"><a href="#arnn"><img src="http://2018.igem.org/wiki/images/c/c1/T--GO_Paris-Saclay--arn.png"
                                alt="logoparissaclay"></a></div>
 
 <div id="arnt">
@@ -143,7 +143,7 @@
                                      alt="logoparissaclay"></a></div>
 
 <div id="philt">
-  Philipe
+  Philippe
 </div>
 
 
@@ -352,10 +352,21 @@
 </div>
 
 <div class="textphotadv">
-  <div id="memg">Stéphanie Bory-Moné</div>
+  <div id="memg">Stéphanie Bury-Moné</div>
   <br/>
 
   Leading.
+</div>
+
+<div id="photdescr"><img id="arnn" src="http://2018.igem.org/wiki/images/c/c1/T--GO_Paris-Saclay--arn.png"
+                         alt="logoparissaclay">
+</div>
+
+<div class="textphotadv">
+  <div id="memg">Arnaud Ferré</div>
+  <br/>
+
+  Ideas!
 </div>
 
 <div class="ousm2">
