--- a/src/app/background/background.component.html
+++ b/src/app/background/background.component.html
@@ -15,19 +15,24 @@
   </div>
 
   <p>According to the Organisation for Economic Co-operation and Development (OECD) the drug consumption has drastically
-  increased since the beginning of the 2000. For instance, we can observe a doubling of antidiabetic, antidepressants,
+    increased since the beginning of the 2000. For instance, we can observe a doubling of antidiabetic, antidepressants,
     antihypertensives and cholesterol-lowering drugs consumption between the years 2000 and 2005.</p>
 
 
-  <p>Some of the drugs are released in the wastewater in their native form, because not completely metabolized by the human
-    body. As a matter of fact, several molecules have been found in large quantities in effluent water near hospitals but
-    also in surface water with a concentration of up to μg per liter per drug<reference-box shorthand="Deblonde2011"></reference-box>.</p>
-
+  <p>Some of the drugs are released in the wastewater in their native form, because not completely metabolized by the
+    human
+    body. As a matter of fact, several molecules have been found in large quantities in effluent water near hospitals
+    but
+    also in surface water with a concentration of up to μg per liter per drug
+    <reference-box shorthand="Deblonde2011"></reference-box>
+    .
+  </p>
 
 
   <mat-card class="normalmargin" style="width: 70%;">
     <img src="http://2018.igem.org/wiki/images/a/a4/T--GO_Paris-Saclay--1_drugconsumpt.png" class="wideimg">
-    <div class="mat-caption captionafterapicture">Figure 1: Diagram of the drug consumption (based on antihypertensive drug consumption) between 2000 and 2015 in
+    <div class="mat-caption captionafterapicture">Figure 1: Diagram of the drug consumption (based on antihypertensive
+      drug consumption) between 2000 and 2015 in
       various countries per 1 000 people per day.
     </div>
   </mat-card>
@@ -40,50 +45,73 @@
   </div>
 
 
-  <p>If these concentrations do not seem alarming, they represent a real problem for the ecosystem but also for the human
-  being. At first, antibiotic accumulation in wastewater contribute to bacterial resistance. Moreover, pharmaceuticals
-  in wastewater threaten certain type of aquatic species, inhibiting their development, growth or can change certain
-    species behaviours<reference-box shorthand="Patneedi2015"></reference-box>.</p>
+  <p>f the concentrations of drugs measured in the environment do not seem alarming, they represent a real problem for
+    the ecosystem but also for the human
+    being. Firstly, antibiotic accumulation in wastewater contribute to bacterial resistance. Secondly, pharmaceuticals
+    in wastewater threaten some aquatic species, inhibiting their development, growth or changing
+    their behaviours
+    <reference-box shorthand="Patneedi2015"></reference-box>
+    .
+  </p>
 
   <p>One study demonstrated that human embryonic cells cannot develop in a media composed of a drug mixture found in
-    wastewater<reference-box shorthand="Pomati2006"></reference-box>.</p>
+    wastewater
+    <reference-box shorthand="Pomati2006"></reference-box>
+    .
+  </p>
 
 
-  <mat-card class="normalmargin" style="width: 70%;">
+  <mat-card class="normalmargin" style="width: 80%;">
     <img src="http://2018.igem.org/wiki/images/d/de/T--GO_Paris-Saclay--2_cells.png" class="wideimg">
-    <div class="mat-caption captionafterapicture">Figure 2: Light microscopy (20X magnification) of HEK293 cells untreated (A) and exposed to a pharmaceutical mixture
-      from wastewaters(B).
+    <div class="mat-caption captionafterapicture">Figure 2: Light microscopy (20X magnification) of HEK293 cells
+      untreated (A) and exposed to a pharmaceutical mixture
+      from wastewaters(B). <br><br>From : <i>Pomati, F., Castiglioni, S., Zuccato, E., Fanelli, R., Vigetti, D., Rossetti, C., &
+        Calamari, D. (2006). Effects of a complex mixture of therapeutic drugs at environmental levels on human
+        embryonic cells. Environmental Science and Technology, 40(7), 2442–2447.</i>
     </div>
   </mat-card>
 
 
-  <p>Unfortunately, only few studies focusing on chronic exposures and synergistic effect of pharmaceuticals in ecosystems
-  close to hospital effluents, have been made<reference-box shorthand="Hernando2004"></reference-box>.</p>
+  <p>Unfortunately, only few studies focusing on chronic exposures and synergistic effect of pharmaceuticals in
+    ecosystems
+    close to hospital effluents, have been made
+    <reference-box shorthand="Hernando2004"></reference-box>
+    .
+  </p>
   <div class="titrebloc">
     <img class="carretitrepincipal"
          src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
     <h1>Methotrexate as a water pollutant</h1>
   </div>
 
-  <p>Cytotoxic anticancer drugs are among harmful chemicals found in hospital wastewater at high concentration (up to 4689
-  ng/µL<reference-box shorthand="Yin2010"></reference-box>). Degradation through physical and chemical methods exist but are often inefficient,
-  unsustainable or expensive. We propose MethotrExit, a bioreactor-based approach to tackle this problem. We focused on
-    the biotransformation of methotrexate (MTX), a widely used anticancer drug.</p>
-  <p>This can be explained by the fact that 60 to 90% of the MTX ingested is excreted by the urine in its active form. In
-  addition, it is rapidly metabolized to 7-OH-MTX, a highly toxic compound that has never been measured in wastewater.
-  Few studies have been conducted for the time being on the effects of MTX alone in the environment. Nevertheless, it
-  has been seen that small doses of MTX in zebrafish habitat cause developmental problems, including developmental
-    arrest (head necrosis and congenital heart problems)<reference-box shorthand="Lee2012"></reference-box><reference-box shorthand="Sun2009"></reference-box>.
+  <p>Cytotoxic anticancer drugs are among harmful chemicals found in hospital wastewater at high concentration (up to
+    4689
+    ng/µL
+    <reference-box shorthand="Yin2010"></reference-box>
+    ). Degradation through physical and chemical methods exist but are often inefficient,
+    unsustainable or expensive. We propose MethotrExit, a bioreactor-based approach to tackle this problem. We focused
+    on
+    the biotransformation of methotrexate (MTX), a widely used anticancer drug.
+  </p>
+  <p>The detection of MTX in the environment can be explained by the fact that 60 to 90% of the MTX ingested is excreted
+    by the urine in its active form. In
+    addition, it is rapidly metabolized to 7-OH-MTX, a highly toxic compound that has never been measured in wastewater.
+    Few studies have been conducted for the time being on the effects of MTX alone in the environment. Nevertheless, it
+    has been seen that small doses of MTX in zebrafish habitat cause developmental problems, including developmental
+    arrest (head necrosis and congenital heart problems)
+    <reference-box shorthand="Lee2012"></reference-box>
+    <reference-box shorthand="Sun2009"></reference-box>
+    .
   </p>
 
   <mat-card class="normalmargin" style="width: 60%;">
     <img src="http://2018.igem.org/wiki/images/5/55/T--GO_Paris-Saclay--3_zebrafish.png" class="wideimg">
-    <div class="mat-caption captionafterapicture">Figure 3: Abnormal cell cycle properties of MTX treated embryos A) After 24 hours of 200 μM or 400 μM MTX exposure,
-      embryos are capable of incorporating BrdU via DNA synthesis.
+    <div class="mat-caption captionafterapicture">Figure 3: Abnormal cell cycle properties of MTX treated embryos. After
+      24 hours of 200 μM or 400 μM MTX exposure,
+      embryos are capable of incorporating BrdU via DNA synthesis.<br><br>
+      From <i>Lee, M. S., Bonner, J. R., Bernard, D. J., Sanchez, E. L., Sause, E. T., Prentice, R. R., … Brody, L. C. (2012). Disruption of the folate pathway in zebrafish causes developmental defects. BMC Developmental Biology, 12(1), 12.</i>
     </div>
   </mat-card>
-
-
 
 
 </mat-card>
